refactor: update business rules

--- a/index.html
+++ b/index.html
@@ -127,21 +127,16 @@
 
                     <div class="list">
                         <div class="line">
-                            <img src="/assets/circle-orange.svg" alt=""> <span> Preços especiais para colaboradores
+                            <img src="/assets/circle-orange.svg" alt=""> <span> Tabela de Preço do Colaborador
                                 </span>
                         </div>
                         <div class="line">
-                            <img src="/assets/circle-orange.svg" alt=""> <span>Cashback de
-                                <span class="bold">10%</span></span>
+                            <img src="/assets/circle-orange.svg" alt=""> <span> Cashback de
+                                <span class="bold">3%</span> nas compras </span>
                         </div>
                         <div class="line">
-                            <img src="/assets/circle-orange.svg" alt=""> <span>Cashback
-                                de
-                                <span class="bold">5%</span> nas compras de amigos</span>
-                        </div>
-                        <div class="line">
-                            <img src="/assets/circle-orange.svg" alt=""> <span
-                                class="bold">Frete grátis para 4 compras por ano</span>
+                            <img src="/assets/circle-orange.svg" alt=""><span>Cashback de
+                                <span class="bold">3.5%</span> nas compras de indicados</span>
                         </div>
                     </div>
 
@@ -170,7 +165,7 @@
 
                     <div class="line"></div>
 
-                    <p>E cashback nas compras dos seus convidados</p>
+                    <p>Compre novos produtos por preços ainda melhores usando o cashback</p>
                 </div>
 
                 <div class="card" id="card-discount">
@@ -196,7 +191,7 @@
 
                     <div class="line"></div>
 
-                    <p>Descontos exclusivos para membros do clube</p>
+                    <p>Garanta preços e promoções especiais como membro</p>
                 </div>
 
                 <div class="card" id="card-frete">
@@ -245,7 +240,7 @@
 
                     <div class="line"></div>
 
-                    <p>E cashback nas compras dos seus convidados</p>
+                    <p>Acumule pontos e garanta o frete de sua compra.</p>
                 </div>
 
                 <div class="card" id="card-friend">
