--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
                                 </span>
                         </div>
                         <div class="line">
+                            <img src="/assets/tick-circle-blue.svg" alt=""> <span> Promoções <span class="bold" >exclusivas</span>
+
+                                </span>
+                        </div>
+                        <div class="line">
                             <img src="/assets/circle-orange.svg" alt=""> <span> Cashback de
                                 <span class="bold">3%</span> nas compras </span>
                         </div>
