refactor: elements sizes of hero

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section data-class="hero" class="hero">
 
-            <h1>Bem vindo ao <br> <span>Clube Mueller</span></h1>
+            <h1><span>Meu Clube Mueller</span></h1>
 
             <img load="lazy" src="https://goffwd.sirv.com/clube-mueller/hero-icons.svg" alt="" class="icons">
 
@@ -38,7 +38,7 @@
 
                 <div class="balance-pending">
                     <p class="value">R$ <span>00,00</span></p>
-                    <p class="label">seu saldo em <span>cashback</span></p>
+                    <p class="label">seu saldo <span>pendente</span></p>
                 </div>
             </div>
 
@@ -52,7 +52,7 @@
            </h2>
         </section>
 
-        <section data-class="share" class="share">
+        <!-- <section data-class="share" class="share">
             <h2>Convide seus amigos</h2>
 
             <div class="link-box">
@@ -71,7 +71,7 @@
             </div>
 
             <img class="shape-bg-desk" src="./assets/bg-share-desk.svg" alt="">
-        </section>
+        </section> -->
 
         <section data-class="send" class="send">
             <h2>Convidar amigos!</h2>
@@ -125,20 +125,20 @@
 
                     <div class="list">
                         <div class="line">
-                            <img src="/assets/circle-orange.svg" alt=""> <span> Tabela de Preço do Colaborador
+                            <img src="assets/circle-orange.svg" alt=""> <span> Tabela de Preço do Colaborador
                                 </span>
                         </div>
                         <div class="line">
-                            <img src="/assets/tick-circle-blue.svg" alt=""> <span> Promoções <span class="bold" >exclusivas</span>
+                            <img src="assets/circle-orange.svg" alt=""> <span> Promoções <span class="bold" >exclusivas</span>
 
                                 </span>
                         </div>
                         <div class="line">
-                            <img src="/assets/circle-orange.svg" alt=""> <span> Cashback de
+                            <img src="assets/circle-orange.svg" alt=""> <span> Cashback de
                                 <span class="bold">3%</span> nas compras </span>
                         </div>
                         <div class="line">
-                            <img src="/assets/circle-orange.svg" alt=""><span>Cashback de
+                            <img src="assets/circle-orange.svg" alt=""><span>Cashback de
                                 <span class="bold">3.5%</span> nas compras de indicados</span>
                         </div>
                     </div>
@@ -304,7 +304,6 @@
     </script>
 
     <script src="./js/global.js"></script>
-    <script src="./js/clipboard.js"></script>
     <script src="./js/levels.js"></script>
     <script src="./js/invited-list.js"></script>
 </body>
